Dark theme for Google reCAPTCHA widget

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                         </div>
 
                         <!-- reCAPTCHA widget -->
-                        <div class="g-recaptcha" data-sitekey="6LccHtEqAAAAAAV39-i0d7599M01beJG1YTts2jP"></div>
+                        <div class="g-recaptcha" data-sitekey="6LccHtEqAAAAAAV39-i0d7599M01beJG1YTts2jP" data-theme="dark"></div>
 
                         <p class="minor-note"><em>
                             We use Google reCAPTCHA to protect this form from spam and abuse and we use Formspree to process and save the form data. Learn more about our <a href="../privacy-policy.html">Privacy Policy</a>.
