--- a/education-skills.html
+++ b/education-skills.html
@@ -30,7 +30,9 @@
         <link rel="icon" type="image/png" sizes="512x512" href="../icons/android-chrome-512x512.png">
         <!-- Web App Manifest for PWA -->
         <link rel="manifest" href="../icons/site.webmanifest">
-        
+        <!-- Social Media Meta Tags -->
+         <meta property="og:image" content="../images/images/thumbnail.png">
+                 
         <!-- Link main.js -->
         <script src="../js/main.js"></script>
     </head>
