--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,9 @@
         <!-- Web App Manifest for PWA -->
         <link rel="manifest" href="../icons/site.webmanifest">
         <!-- Social Media Meta Tags -->
-         <meta property="og:image" content="../images/images/thumbnail.png">
+        <meta property="og:image" content="../images/images/thumbnail.png">
+        <meta property="og:image:width" content="1904">
+        <meta property="og:image:height" content="1572">
                  
         <!-- Link main.js -->
         <script src="../js/main.js"></script>
