--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
         <!-- Web App Manifest for PWA -->
         <link rel="manifest" href="../icons/site.webmanifest">
         <!-- Social Media Meta Tags -->
-        <meta property="og:image" content="../images/images/thumbnail.png">
+        <meta property="og:image" content="../images/thumbnail.png">
         <meta property="og:image:width" content="1904">
         <meta property="og:image:height" content="1572">
                  
