Added hamburger menu to main home page (issue #6)

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <main>
         <!-- Custum header for home page -->
         <div id="hero">
-
-          <div class="hamburger-nav-menu">
+          <div class="hamburger-nav-menu-homepage">
               <nav>
                   <button class="hamburger" href="javascript:void(0);" class="icon" onclick="opdnHamburgerMenu()">
                       <div class="line"></div>
