Updated legal copyright information

--- a/about.html
+++ b/about.html
@@ -115,7 +115,12 @@
                             <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                         </ul>
                     </nav>
-                    <p id="copyright">&copy; 2025 Majdi Jaigirdar. All rights reserved.</p>
+                <p id="copyright">
+                &copy; 2025 Majdi Jaigirdar. All rights reserved.<br>
+                All product names, logos, and brands are property of their respective owners.
+                All company, product, and service names used in this website are for identification purposes only.
+                Use of these names, logos, and brands does not imply endorsement.
+                </p>
                 </div>
             </div>
         </footer>
