Updated hero text message

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <div id="hello-text">
               <h1><span id="smallHey">Hey there!</span><br> I'm Majdi Jaigirdar 👋</h1>
-              <p>I'm a Computer Science student at Edge Hill University. I've got a passion for programming and I'm always looking to learn new things. I'm currently learning Python and Java at uni, I'm also learning web development in my free time and learning new technologies, tools and languages.</p>            
+              <p>A Computer Science student at Edge Hill University. With a passion for programming and always looking to learn new things. Currently learning Python and Java at uni, I'm also learning web development in my free time and learning new technologies, tools and languages.</p>            
               
               
               <div class="social-buttons">
