--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                           ✕
                       </button>
                       <ul>
-                          <li><a href="../index.html">Home</a></li>
+                          <li><a class="active-nav-link" href="../index.html">Home</a></li>
                           <li><a href="../about.html">About</a></li>
                           <li><a href="../projects.html">Projects</a></li>
-                          <li><a class="active-nav-link" href="../education-skills.html">Education & Skills</a></li>
+                          <li><a href="../education-skills.html">Education & Skills</a></li>
                           <li><a href="../contact.html">Contact</a></li>
                       </ul>
                   </nav>
