--- a/index.html
+++ b/index.html
@@ -166,3 +166,8 @@
       </main>
     </body>
 </html>
+
+<!-- HIDDEN MESSAGE
+Hey there! 🕵 What you looking for?
+If you are reading this, it means you are curious and you enjoy exploring in detail.
+Unfortunately, this place has no hidden treasures or secrets. -->
