Cookie consent pop-up

--- a/education-skills/EPQ.html
+++ b/education-skills/EPQ.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-03ZXKCCJLR"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-03ZXKCCJLR');
-        </script>
+        <meta name="google-site-verification" content="G-03ZXKCCJLR" />
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
         <title>Majdi Jaigirdar's Education & Skills - EPQ</title>
@@ -106,6 +98,19 @@
                     Use of these names, logos, and brands does not imply endorsement.
                 </p>
             </div>
-        </footer>
+        </footer> 
+      <div id="cookie-consent-banner">
+        <div>
+          <div class="cookie-text">
+            <p class="cookie-text-title">We use cookies!</p>
+            <p class="cookie-text-content">Our website uses cookies to enhance your browsing experience and analyse site traffic. By clicking "Accept", you consent to our use of cookies. You can learn more about our cookie policy and change your cookie settings at any time.</p>
+            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy.html">Privacy Policy</a>.</p>
+          </div>
+          <div class="button-container">
+            <button class="cookie-consent-accept" onclick="acceptCookies()">Accept</button>
+            <button class="cookie-consent-decline" onclick="declineCookies()">Decline</button>
+          </div>
+        </div>
+      </div>                
     </body>
 </html>
