--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-03ZXKCCJLR"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'G-03ZXKCCJLR');
-        </script>
+        <meta name="google-site-verification" content="G-03ZXKCCJLR" />
         <meta charset="UTF-8">
         <meta name="robots" content="index, follow">
         <title>Majdi Jaigirdar | Privacy Policy</title>
@@ -73,7 +65,16 @@
         </header>
         <main>
 
-            <div class="defualt-page-format-main-content" id="about-me-main-content">
+            <div class="defualt-page-format-main-content">
+                <h1>Website Data Settings</h1>
+                <p>Below you can mange your cookies, cache and local storage settings for this website. You can toggle if you consent to cookies or not.</p>
+
+                <p>Click <a href="javascript:void(0);" onclick="deleteAllCookiesAndCache()">here</a> to delete all cookies and cache.<br>
+                Click <a href="javascript:void(0);" onclick="toggleCookieConsent()">here</a> to toggle cookie consent.</p>
+                <p class="current-cookie-consent-status" style="display: none;">Could not load cookies settings.</p>
+            </div>
+
+            <div class="defualt-page-format-main-content">
                 <div class="privacy-policy">
                     <h1>Privacy Policy</h1>
 
@@ -173,6 +174,19 @@
                     Use of these names, logos, and brands does not imply endorsement.
                 </p>
             </div>
-        </footer>
+        </footer> 
+      <div id="cookie-consent-banner">
+        <div>
+          <div class="cookie-text">
+            <p class="cookie-text-title">We use cookies!</p>
+            <p class="cookie-text-content">Our website uses cookies to enhance your browsing experience and analyse site traffic. By clicking "Accept", you consent to our use of cookies. You can learn more about our cookie policy and change your cookie settings at any time.</p>
+            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy.html">Privacy Policy</a>.</p>
+          </div>
+          <div class="button-container">
+            <button class="cookie-consent-accept" onclick="acceptCookies()">Accept</button>
+            <button class="cookie-consent-decline" onclick="declineCookies()">Decline</button>
+          </div>
+        </div>
+      </div>                
     </body>
 </html>
