Fixed homepage navigation bar/menue bug, and removed about pgae .html part

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
       <main>
         <!-- Custum header for home page -->
         <div id="hero">
-          <div class="hamburger-nav-menu-homepage">
+          <div class="homepage-hamburger-nav-menu">
               <nav>
-                  <button class="hamburger" href="javascript:void(0);" class="icon" onclick="opdnHamburgerMenu()">
-                      <div class="line"></div>
-                      <div class="line"></div>
-                      <div class="line"></div>
+                  <button class="homepage-hamburger" href="javascript:void(0);" class="icon" onclick="homepage_opdnHamburgerMenu()">
+                      <div class="homepage-line"></div>
+                      <div class="homepage-line"></div>
+                      <div class="homepage-line"></div>
                   </button>
               </nav>
           </div>
           
-          <div class="nav-bar">
-              <div class="Navigation-slide-menu">
-                  <nav id="navigation-menu">
-                      <button class="hamburger-close" onclick="closeHamburgerMenu()" style="color: white; font-size: 30px; background: none; border: none; position: absolute; top: 20px; right: 20px; cursor: pointer;">
+          <div class="homepage-nav-bar">
+              <div class="homepage-navigation-slide-menu">
+                  <nav id="homepage-navigation-menu">
+                      <button class="homepage-hamburger-close" onclick="homepage_closeHamburgerMenu()" style="color: white; font-size: 30px; background: none; border: none; position: absolute; top: 20px; right: 20px; cursor: pointer;">
                           ✕
                       </button>
                       <ul>
                           <li><a class="active-nav-link" href="../index.html">Home</a></li>
-                          <li><a href="../about.html">About</a></li>
+                          <li><a href="../about/">About</a></li>
                           <li><a href="../projects.html">Projects</a></li>
                           <li><a href="../education-skills.html">Education & Skills</a></li>
                           <li><a href="../contact.html">Contact</a></li>
@@ -141,7 +141,7 @@
             <nav id="navigation-menu">
               <ul>
                 <li><a class="active-nav-link" href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
+                <li><a href="../about/">About</a></li>
                 <li><a href="../projects.html">Projects</a></li>
                 <li><a href="../education-skills.html">Education & Skills</a></li>
                 <li><a href="../contact.html">Contact</a></li>
