--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                         </button>
                         <ul>
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../about/">About</a></li>
                             <li><a class="active-nav-link" href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="defualt-page-format-main-content">
-                <p>In the meantime, feel free to check out my <a href="../about.html">About</a> page or <a href="../contact.html">Contact</a> me.</p>
+                <p>In the meantime, feel free to check out my <a href="../about/">About</a> page or <a href="../contact.html">Contact</a> me.</p>
                 <p><em>(Last updated: Wednesday, 19th Feburary 2025)</em></p>
             </div>
 
@@ -116,7 +116,7 @@
                     <nav id="navigation-menu">
                         <ul class="footer-nav">
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../about/">About</a></li>
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
