--- a/education-skills/EPQ.html
+++ b/education-skills/EPQ.html
@@ -54,7 +54,7 @@
                         </button>
                         <ul>
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../about/">About</a></li>
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a class="active-nav-link" href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
@@ -83,7 +83,7 @@
                     <nav id="navigation-menu">
                         <ul>
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../about/">About</a></li>
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
