--- a/site-map.html
+++ b/site-map.html
@@ -38,7 +38,7 @@
             <nav id="navigation-menu">
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../about/">About</a></li>
                     <li><a href="../projects.html">Projects</a></li>
                     <li><a href="../education-skills.html">Education & Skills</a></li>
                     <li><a href="../contact.html">Contact</a></li>
@@ -57,7 +57,7 @@
                     <h2>Sitemap</h2>
                     <ul>
                       <li><a href="../index.html">Home</a></li>
-                      <li><a href="../about.html">About</a></li>
+                      <li><a href="../about/">About</a></li>
                       <li><a href="../contact.html">Contact</a></li>
                       <li><a href="../education-skills.html">Education & Skills</a></li>
                       <ul>
@@ -83,7 +83,7 @@
                     <nav id="navigation-menu">
                         <ul>
                             <li><a href="../index.html">Home</a></li>
-                            <li><a href="../about.html">About</a></li>
+                            <li><a href="../about/">About</a></li>
                             <li><a href="../projects.html">Projects</a></li>
                             <li><a href="../education-skills.html">Education & Skills</a></li>
                             <li><a href="../contact.html">Contact</a></li>
