Updated webpages so their urls wont have *.html by putting them in their own folder and making them be index.html files for each folder

--- a/about/index.html
+++ b/about/index.html
@@ -53,11 +53,11 @@
                             ✕
                         </button>
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a class="active-nav-link" href="../about/">About</a></li>
-                            <li><a href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
-                            <li><a href="../contact.html">Contact</a></li>
+                            <li><a href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
+                            <li><a href="../contact/">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -99,12 +99,12 @@
                 <div id="same-line-content">
                     <nav id="navigation-menu">
                         <ul class="footer-nav">
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a href="../about/">About</a></li>
-                            <li><a href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
-                            <li><a href="../contact.html">Contact</a></li>
-                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
+                            <li><a href="../contact/">Contact</a></li>
+                            <li><a href="../privacy-policy/">Privacy Policy</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -121,7 +121,7 @@
           <div class="cookie-text">
             <p class="cookie-text-title">We use cookies!</p>
             <p class="cookie-text-content">Our website uses cookies to enhance your browsing experience and analyse site traffic. By clicking "Accept", you consent to our use of cookies. You can learn more about our cookie policy and change your cookie settings at any time.</p>
-            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy.html">Privacy Policy</a>.</p>
+            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy/">Privacy Policy</a>.</p>
           </div>
           <div class="button-container">
             <button class="cookie-consent-accept" onclick="acceptCookies()">Accept</button>
