--- a/contact/index.html
+++ b/contact/index.html
@@ -54,10 +54,10 @@
                             ✕
                         </button>
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a href="../about/">About</a></li>
-                            <li><a href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
+                            <li><a href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
                             <li><a class="active-nav-link" href="../contact.html">Contact</a></li>
                         </ul>
                     </nav>
@@ -102,7 +102,7 @@
                         <div class="g-recaptcha" data-sitekey="6LccHtEqAAAAAAV39-i0d7599M01beJG1YTts2jP" data-theme="dark"></div>
 
                         <p class="minor-note"><em>
-                            We use Google reCAPTCHA to protect this form from spam and abuse and we use Formspree to process and save the form data. Learn more about our <a href="../privacy-policy.html">Privacy Policy</a>.
+                            We use Google reCAPTCHA to protect this form from spam and abuse and we use Formspree to process and save the form data. Learn more about our <a href="../privacy-policy/">Privacy Policy</a>.
                         </em></p>
                         
                         <button type="submit">Send</button>
@@ -174,12 +174,12 @@
                 <div id="same-line-content">
                     <nav id="navigation-menu">
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a href="../about/">About</a></li>
-                            <li><a href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
-                            <li><a href="../contact.html">Contact</a></li>
-                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
+                            <li><a href="../contact/">Contact</a></li>
+                            <li><a href="../privacy-policy/">Privacy Policy</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -196,7 +196,7 @@
           <div class="cookie-text">
             <p class="cookie-text-title">We use cookies!</p>
             <p class="cookie-text-content">Our website uses cookies to enhance your browsing experience and analyse site traffic. By clicking "Accept", you consent to our use of cookies. You can learn more about our cookie policy and change your cookie settings at any time.</p>
-            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy.html">Privacy Policy</a>.</p>
+            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy/">Privacy Policy</a>.</p>
           </div>
           <div class="button-container">
             <button class="cookie-consent-accept" onclick="acceptCookies()">Accept</button>
