--- a/projects/index.html
+++ b/projects/index.html
@@ -56,11 +56,11 @@
                             ✕
                         </button>
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a href="../about/">About</a></li>
-                            <li><a class="active-nav-link" href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
-                            <li><a href="../contact.html">Contact</a></li>
+                            <li><a class="active-nav-link" href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
+                            <li><a href="../contact/">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="defualt-page-format-main-content">
-                <p>In the meantime, feel free to check out my <a href="../about/">About</a> page or <a href="../contact.html">Contact</a> me.</p>
+                <p>In the meantime, feel free to check out my <a href="../about/">About</a> page or <a href="../contact/">Contact</a> me.</p>
                 <p><em>(Last updated: Wednesday, 19th Feburary 2025)</em></p>
             </div>
 
@@ -115,12 +115,12 @@
                 <div id="same-line-content">
                     <nav id="navigation-menu">
                         <ul class="footer-nav">
-                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="../">Home</a></li>
                             <li><a href="../about/">About</a></li>
-                            <li><a href="../projects.html">Projects</a></li>
-                            <li><a href="../education-skills.html">Education & Skills</a></li>
-                            <li><a href="../contact.html">Contact</a></li>
-                            <li><a href="../privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="../projects/">Projects</a></li>
+                            <li><a href="../education-skills/">Education & Skills</a></li>
+                            <li><a href="../contact/">Contact</a></li>
+                            <li><a href="../privacy-policy/">Privacy Policy</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -137,7 +137,7 @@
           <div class="cookie-text">
             <p class="cookie-text-title">We use cookies!</p>
             <p class="cookie-text-content">Our website uses cookies to enhance your browsing experience and analyse site traffic. By clicking "Accept", you consent to our use of cookies. You can learn more about our cookie policy and change your cookie settings at any time.</p>
-            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy.html">Privacy Policy</a>.</p>
+            <p class="cookie-text-content">For more information, please read our <a href="../privacy-policy/">Privacy Policy</a>.</p>
           </div>
           <div class="button-container">
             <button class="cookie-consent-accept" onclick="acceptCookies()">Accept</button>
