--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <meta property="og:image" content="../images/thumbnail.png">
         <meta property="og:image:width" content="1904">
         <meta property="og:image:height" content="1572">
+
+        <!-- Themeing -->
+        <meta name="theme-color" content="#000d16">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
                  
         <!-- Link main.js -->
         <script src="../js/main.js"></script>
